# crappy-bird

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: crappy_bird.c.486B2CD224D72706.idx  crappy_bird.h.86C15EEFE15362A2.idx  crappy_timer.c.D01EFBDF2433105F.idx  crappy_timer.h.1207B7FEFFFECA93.idx  crappy_vector.c.DBB2D7D84534C1F6.idx  crappy_vector.h.58F0399F20AE88F9.idx  curses.h.B1B540E8BAD858F0.idx  main.c.B131AEF356AFA98D.idx  ncurses_dll.h.8C80060984782A28.idx  unctrl.h.A0D82F39BBC2ABA6.idx
include/: common.h  crappy_bird.h  crappy_camera.h  crappy_color_subsystem.h  crappy_pipe.h  crappy_pipe_rng.h  crappy_score_box.h  crappy_vector.h
include/objects/: crappy_bird.h  crappy_camera.h  crappy_pipe.h  crappy_pipe_rng.h  crappy_score_box.h
include/utils/: common.h  crappy_screen.h  crappy_timer.h  crappy_vector.h
src/: common.c  crappy_bird.c  crappy_camera.c  crappy_color_subsystem.c  crappy_pipe.c  crappy_pipe_rng.c  crappy_score_box.c  crappy_screen.c  crappy_timer.c  crappy_vector.c  main.c
src/objects/: crappy_bird.c  crappy_camera.c  crappy_pipe.c  crappy_pipe_rng.c  crappy_score_box.c
src/subsystems/: crappy_color.c
src/utils/: common.c  crappy_screen.c  crappy_timer.c  crappy_vector.c
